--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -12,6 +12,7 @@
         {{/userName}}
         {{^userName}}
             <a href="/oauth2/authorization/google" role="button">Google Login</a>
+            <a href="/oauth2/authorization/naver" role="button">Naver Login</a>
         {{/userName}}
     </div>
 </body>
